tests/Fixtures/Torture/Bad/void_local.g
// EXPECT G007
kernel { entry func Main() { let void v; } }
